# Blackjack

./: .gitignore  CMakeLists.txt  README.md  TODO  card.cpp  card.h  cardview.cpp  cardview.h  dealer.cpp  dealer.h  deck.cpp  deck.h  game.cpp  game.h  gamescene.cpp  gamescene.h  human.cpp  human.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  resources.qrc
